--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "convex": "^1.12.0",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
+    "next-themes": "^0.3.0",
     "query-string": "^9.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-loader-spinner": "^6.1.6",
     "shadcn-ui": "^0.8.0",
+    "sonner": "^1.4.41",
     "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
